Updated / reran all Jupyter Lab files

--- a/random_forest_trading-AAPL.ipynb
+++ b/random_forest_trading-AAPL.ipynb
@@ -525,7 +525,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1bf53244e88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2a83eb04588>"
       ]
      },
      "execution_count": 6,
@@ -565,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1bf5b753fc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2a847064bc8>"
       ]
      },
      "execution_count": 7,
@@ -1020,7 +1020,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1bf52947908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2a846c9c888>"
       ]
      },
      "execution_count": 9,
@@ -1060,7 +1060,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1bf5b383908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2a846fb3748>"
       ]
      },
      "execution_count": 10,
