--- a/trading_signal_features-AAPL.ipynb
+++ b/trading_signal_features-AAPL.ipynb
@@ -1267,7 +1267,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x20080378fc8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x188d50d9548>"
       ]
      },
      "execution_count": 6,
@@ -1540,7 +1540,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x20088b316c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x188ddbd4788>"
       ]
      },
      "execution_count": 8,
@@ -2013,7 +2013,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2008878a188>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x188dd82a888>"
       ]
      },
      "execution_count": 10,
